syntax = "proto3";
package youliao.pdu.friendlist;
import "youliao.base.proto";


message Group_Friend
{
    uint32 group_id   = 1;          //好友列表 组id
    string   group_name = 2;        //好友列表 组名
    repeated youliao.pdu.base.FriendInfo friend = 3; //该组下的好友
}


//请求好友列表
message FriendListRequest
{
    uint32 user_id = 1;
    uint32 msg_serv_idx = 2;
    bytes attach_data = 20;
}

//响应
message FriendListRespone
{
    map<uint32, Group_Friend> friend_list = 1;
    bytes attach_data = 20;
}

//好友状态更改
message FriendStatusChangeMessage
{
    uint32 user_id = 1;
    youliao.pdu.base.UserStatusType user_status_type = 2;
}

//好友个性签名修改
message SignatureChangeResquest
{
    uint32 user_id = 1;
    string user_signature = 2;
}

message SignatureChangeRespone
{
    uint32 user_id = 1;
    string user_signature = 2;
    youliao.pdu.base.ResultType result_type = 3;
}

message FriendSignatureChangedNotify
{
    uint32 friend_id = 1;
    string friend_signatrue = 2;
}