syntax = "proto3";
package youliao.pdu.message;
import "youliao.base.proto";


message MessageData
{
    uint32 relate_id    = 1;
    uint32 from_user_id = 2;
    uint32 to_id        = 3;
    uint32 msg_id       = 4;
    uint32 create_time  = 5;
    youliao.pdu.base.MessageType message_type = 6;
    bytes  message_data = 7;
    uint32 audio_time   = 8;    //仅仅在语音消息时使用
    uint32 to_user_id   = 9;    //此字段在路由服务器向消息服务器转发群消息时使用
}



//消息确认
message MessageDataAck
{
    uint32 from_user_id = 1;
    uint32 to_user_id   = 2;
    uint32 msg_id       = 3;
}

message LatestMsgIdRequest
{
    uint32 user_id = 1;
    uint32 friend_id = 2;
}

message LatestMsgIdRespone
{
    uint32 user_id = 1;
    uint32 friend_id = 2;
    uint32 latest_msg_id = 3;
}

message GetOfflineMessageRequest
{
    uint32 user_id = 1;
}

message GetOfflineMessageRespone
{
    uint32 user_id = 1;
    repeated MessageData msg_data = 2;
}

message GetGroupOfflineMessageRequest
{
    uint32 user_id = 1;
    uint32 group_id = 2;
    uint32 curr_msg_id = 3;
}

message GetGroupOfflineMessageRespone
{
    uint32 user_id = 1;
    uint32 group_id = 2;
    repeated MessageData msg_data = 3;
}